MCR-2956 allow custom upload handling (#1949)