@@ -22,70 +22,46 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
+import java.net.URI;
 import java.nio.file.Files;
-import java.nio.file.NoSuchFileException;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.text.Normalizer;
-import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
-import java.util.Locale;
-import java.util.Objects;
 import java.util.Optional;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.mycore.access.MCRAccessException;
-import org.mycore.access.MCRAccessManager;
-import org.mycore.access.MCRRuleAccessInterface;
-import org.mycore.common.MCRException;
-import org.mycore.common.MCRPersistenceException;
-import org.mycore.common.MCRUtils;
-import org.mycore.common.config.MCRConfiguration2;
-import org.mycore.common.config.MCRConfigurationException;
-import org.mycore.datamodel.classifications2.MCRCategoryDAO;
-import org.mycore.datamodel.classifications2.MCRCategoryDAOFactory;
-import org.mycore.datamodel.classifications2.MCRCategoryID;
-import org.mycore.datamodel.metadata.MCRDerivate;
-import org.mycore.datamodel.metadata.MCRMetaClassification;
-import org.mycore.datamodel.metadata.MCRMetaIFS;
-import org.mycore.datamodel.metadata.MCRMetaLinkID;
-import org.mycore.datamodel.metadata.MCRMetadataManager;
-import org.mycore.datamodel.metadata.MCRObjectID;
-import org.mycore.datamodel.niofs.MCRPath;
-import org.mycore.datamodel.niofs.utils.MCRFileCollectingFileVisitor;
-import org.mycore.datamodel.niofs.utils.MCRTreeCopier;
-import org.mycore.frontend.fileupload.MCRPostUploadFileProcessor;
-import org.mycore.frontend.fileupload.MCRUploadHelper;
-import org.mycore.services.i18n.MCRTranslation;
 
 import jakarta.ws.rs.BadRequestException;
-import jakarta.ws.rs.ClientErrorException;
-import jakarta.ws.rs.ForbiddenException;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.PUT;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.QueryParam;
-import jakarta.ws.rs.container.ContainerRequestContext;
 import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.MultivaluedMap;
 import jakarta.ws.rs.core.Response;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.mycore.common.MCRUtils;
+import org.mycore.common.config.MCRConfiguration2;
+import org.mycore.common.config.MCRConfigurationException;
+import org.mycore.frontend.fileupload.MCRPostUploadFileProcessor;
+
+import jakarta.ws.rs.container.ContainerRequestContext;
+import org.mycore.webtools.upload.exception.MCRInvalidFileException;
+import org.mycore.webtools.upload.exception.MCRInvalidUploadParameterException;
+import org.mycore.webtools.upload.exception.MCRMissingParameterException;
+import org.mycore.webtools.upload.exception.MCRUploadForbiddenException;
+import org.mycore.webtools.upload.exception.MCRUploadServerException;
 
 @Path("files/upload/")
 public class MCRUploadResource {
 
     private static final String FILE_PROCESSOR_PROPERTY = "MCR.MCRUploadHandlerIFS.FileProcessors";
-
-    private static final String IGNORE_MAINFILE_PROPERTY = "MCR.Upload.NotPreferredFiletypeForMainfile";
 
     private static final List<MCRPostUploadFileProcessor> FILE_PROCESSORS = initProcessorList();
 
@@ -132,237 +108,124 @@ public class MCRUploadResource {
         }).collect(Collectors.toList());
     }
 
-    private static void setDefaultMainFile(MCRDerivate derivate) {
-        MCRPath path = MCRPath.getPath(derivate.getId().toString(), "/");
-        List<String> ignoreMainfileList = MCRConfiguration2.getString(IGNORE_MAINFILE_PROPERTY)
-            .map(MCRConfiguration2::splitValue)
-            .map(s -> s.collect(Collectors.toList()))
-            .orElseGet(Collections::emptyList);
+    @PUT
+    @Path("begin")
+    public Response begin(@QueryParam("uploadHandler") String uploadHandlerID) throws MCRUploadServerException {
+        MultivaluedMap<String, String> parameters = request.getUriInfo().getQueryParameters();
+
+        MCRUploadHandler uploadHandler = getUploadHandler(uploadHandlerID);
+        String bucketID;
         try {
-            MCRFileCollectingFileVisitor<java.nio.file.Path> visitor = new MCRFileCollectingFileVisitor<>();
-            Files.walkFileTree(path, visitor);
-
-            //sort files by name
-            ArrayList<java.nio.file.Path> paths = visitor.getPaths();
-            paths.sort(Comparator.comparing(java.nio.file.Path::getNameCount)
-                .thenComparing(java.nio.file.Path::getFileName));
-            //extract first file, before filtering
-            MCRPath firstPath = MCRPath.toMCRPath(paths.get(0));
-
-            //filter files, remove files that should be ignored for mainfile
-            paths.stream()
-                .map(MCRPath.class::cast)
-                .filter(p -> ignoreMainfileList.stream().noneMatch(p.getOwnerRelativePath()::endsWith))
-                .findFirst()
-                .or(() -> Optional.of(firstPath))
-                .ifPresent(file -> {
-                    derivate.getDerivate().getInternals().setMainDoc(file.getOwnerRelativePath());
-                    try {
-                        MCRMetadataManager.update(derivate);
-                    } catch (MCRPersistenceException | MCRAccessException e) {
-                        LOGGER.error("Could not set main file!", e);
-                    }
-                });
-        } catch (IOException e) {
-            LOGGER.error("Could not set main file!", e);
+            bucketID = uploadHandler.begin(parameters);
+            MCRFileUploadBucket.createBucket(bucketID, parameters, uploadHandler);
+        } catch (MCRUploadForbiddenException e) {
+            return Response.status(Response.Status.FORBIDDEN).entity(e.getMessage()).build();
+        } catch (MCRInvalidUploadParameterException | MCRMissingParameterException e) {
+            return Response.status(Response.Status.BAD_REQUEST).entity(e.getMessage()).build();
+        } catch (MCRUploadServerException e) {
+            return Response.status(Response.Status.INTERNAL_SERVER_ERROR).entity(e.getMessage()).build();
         }
+
+        return Response.ok().entity(bucketID).build();
     }
 
     @PUT
-    @Path("commit")
-    public void commit(@QueryParam("uploadID") String uploadID,
-        @QueryParam("classifications") String classificationValues) {
-        final MCRFileUploadBucket bucket = MCRFileUploadBucket.getBucket(uploadID);
+    @Path("{buckedID}/commit")
+    public Response commit(@PathParam("buckedID") String buckedID) {
+        final MCRFileUploadBucket bucket = MCRFileUploadBucket.getBucket(buckedID);
         if (bucket == null) {
-            throw new BadRequestException("uploadID " + uploadID + " is invalid!");
+            throw new BadRequestException("buckedID " + buckedID + " is invalid!");
         }
 
-        final List<MCRMetaClassification> classifications = getClassifications(classificationValues);
+        URI location;
 
-        final java.nio.file.Path root = bucket.getRoot();
-
-        MCRObjectID objOrDerivateID = MCRObjectID.getInstance(bucket.getObjectID());
-        final boolean isDerivate = "derivate".equals(objOrDerivateID.getTypeId());
-
-        final MCRPath targetDerivateRoot;
-
-        if (isDerivate) {
-            targetDerivateRoot = MCRPath.getPath(objOrDerivateID.toString(), "/");
-        } else {
+        try {
+            location = bucket.getUploadHandler().commit(bucket);
+        } catch (MCRUploadServerException e) {
+            return Response.status(Response.Status.INTERNAL_SERVER_ERROR).entity(e.getMessage()).build();
+        } finally {
             try {
-                objOrDerivateID = createDerivate(objOrDerivateID, classifications).getId();
-                targetDerivateRoot = MCRPath.getPath(objOrDerivateID.toString(), "/");
-            } catch (MCRAccessException e) {
-                throw new MCRUploadException("mcr.upload.create.derivate.failed", e);
+                MCRFileUploadBucket.releaseBucket(bucket.getBucketID());
+            } catch (MCRUploadServerException e) {
+                LOGGER.error("Error while releasing bucket " + bucket.getBucketID(), e);
             }
         }
-
-        final MCRTreeCopier copier;
-        try {
-            copier = new MCRTreeCopier(root, targetDerivateRoot, false, true);
-        } catch (NoSuchFileException e) {
-            throw new MCRException(e);
+        if (location == null) {
+            return Response.ok().build();
         }
-
-        try {
-            Files.walkFileTree(root, copier);
-        } catch (IOException e) {
-            throw new MCRUploadException("mcr.upload.import.failed", e);
-        }
-
-        MCRDerivate theDerivate = MCRMetadataManager.retrieveMCRDerivate(objOrDerivateID);
-
-        String mainDoc = theDerivate.getDerivate().getInternals().getMainDoc();
-        if (mainDoc == null || mainDoc.isEmpty()) {
-            setDefaultMainFile(theDerivate);
-        }
-
-        MCRFileUploadBucket.releaseBucket(uploadID);
+        return Response.created(location).build();
     }
 
-    private List<MCRMetaClassification> getClassifications(String classifications) {
-        final MCRCategoryDAO dao = MCRCategoryDAOFactory.getInstance();
-        final List<MCRCategoryID> categoryIDS = Stream.of(classifications)
-            .filter(Objects::nonNull)
-            .filter(Predicate.not(String::isBlank))
-            .flatMap(c -> Stream.of(c.split(",")))
-            .filter(Predicate.not(String::isBlank))
-            .filter(cv -> cv.contains(":"))
-            .map(classValString -> {
-                final String[] split = classValString.split(":");
-                return new MCRCategoryID(split[0], split[1]);
-            }).collect(Collectors.toList());
+    public static MCRUploadHandler getUploadHandler(String uploadHandlerID) {
+        Optional<MCRUploadHandler> uploadHandler = MCRConfiguration2
+            .getSingleInstanceOf("MCR.Upload.Handler." + Optional.ofNullable(uploadHandlerID).orElse("Default"));
 
-        if (!categoryIDS.stream().allMatch(dao::exist)) {
-            final String parsedIDS = categoryIDS.stream().map(Object::toString).collect(Collectors.joining(","));
-            throw new MCRException(String.format(Locale.ROOT, "One of the Categories \"%s\" was not found", parsedIDS));
+        if (uploadHandler.isEmpty()) {
+            throw new BadRequestException("The UploadHandler " + uploadHandlerID + " is invalid!");
         }
-
-        return categoryIDS.stream()
-            .map(category -> new MCRMetaClassification("classification", 0, null, category.getRootID(),
-                category.getID()))
-            .collect(Collectors.toList());
-    }
-
-    private MCRObjectID getNewCreateDerivateID(MCRObjectID objId) {
-        String projectID = objId.getProjectId();
-        return MCRMetadataManager.getMCRObjectIDGenerator().getNextFreeId(projectID + "_derivate");
-
-    }
-
-    private MCRDerivate createDerivate(MCRObjectID objectID, List<MCRMetaClassification> classifications)
-        throws MCRPersistenceException, MCRAccessException {
-
-        MCRObjectID derivateID = getNewCreateDerivateID(objectID);
-        MCRDerivate derivate = new MCRDerivate();
-        derivate.setId(derivateID);
-        derivate.getDerivate().getClassifications().addAll(classifications);
-
-        String schema = MCRConfiguration2.getString("MCR.Metadata.Config.derivate").orElse("datamodel-derivate.xml")
-            .replaceAll(".xml", ".xsd");
-        derivate.setSchema(schema);
-
-        MCRMetaLinkID linkId = new MCRMetaLinkID();
-        linkId.setSubTag("linkmeta");
-        linkId.setReference(objectID, null, null);
-        derivate.getDerivate().setLinkMeta(linkId);
-
-        MCRMetaIFS ifs = new MCRMetaIFS();
-        ifs.setSubTag("internal");
-        ifs.setSourcePath(null);
-        derivate.getDerivate().setInternals(ifs);
-
-        LOGGER.debug("Creating new derivate with ID {}", derivateID);
-        MCRMetadataManager.create(derivate);
-
-        setDefaultPermissions(derivateID);
-
-        return derivate;
-    }
-
-    private void setDefaultPermissions(MCRObjectID derivateID) {
-        if (MCRConfiguration2.getBoolean("MCR.Access.AddDerivateDefaultRule").orElse(true)) {
-            MCRRuleAccessInterface aclImpl = MCRAccessManager.getAccessImpl();
-            Collection<String> configuredPermissions = aclImpl.getAccessPermissionsFromConfiguration();
-            for (String permission : configuredPermissions) {
-                MCRAccessManager.addRule(derivateID, permission, MCRAccessManager.getTrueRule(),
-                    "default derivate rule");
-            }
-        }
+        return uploadHandler.get();
     }
 
     @GET
-    @Path("{objectID}/{path:.+}")
+    @Path("{uploadHandler}/{path:.+}")
     @Produces(MediaType.TEXT_PLAIN)
-    public Response validateFile(@PathParam("path") String path,
-        @PathParam("objectID") String objectID,
+    public Response validateFile(
+        @PathParam("uploadHandler") String uploadHandlerID,
+        @PathParam("path") String path,
         @QueryParam("size") String size) {
         String fileName = Paths.get(path).getFileName().toString();
         String unicodeNormalizedFileName =  Normalizer.normalize(fileName, Normalizer.Form.NFC);
-        String translation = MCRTranslation.translate("IFS.invalid.fileName", unicodeNormalizedFileName);
+
         try {
-            MCRUploadHelper.checkPathName(unicodeNormalizedFileName);
-        } catch (MCRException e) {
-            LOGGER.warn("Invalid file name: {} -> {}", unicodeNormalizedFileName, e.getMessage());
-            return Response.status(Response.Status.BAD_REQUEST.getStatusCode(), translation)
-                    .entity(translation).build();
-        }
-
-        long sizeL = Long.parseLong(size);
-        long maxSize = MCRConfiguration2.getOrThrow("MCR.FileUpload.MaxSize", Long::parseLong);
-
-        if (sizeL > maxSize) {
-            translation = MCRTranslation.translate("component.webtools.upload.invalid.fileSize",
-                unicodeNormalizedFileName, MCRUtils.getSizeFormatted(sizeL), MCRUtils.getSizeFormatted(maxSize));
-            return Response.status(Response.Status.BAD_REQUEST.getStatusCode(),
-                translation).entity(translation).build();
+            getUploadHandler(uploadHandlerID).validateFileMetadata(unicodeNormalizedFileName, Long.parseLong(size));
+        } catch (MCRUploadForbiddenException e) {
+            return Response.status(Response.Status.FORBIDDEN).entity(e.getMessage()).build();
+        } catch (MCRInvalidFileException e) {
+            return Response.status(Response.Status.BAD_REQUEST).entity(e.getMessage()).build();
+        } catch (MCRUploadServerException e) {
+            return Response.status(Response.Status.INTERNAL_SERVER_ERROR).entity(e.getMessage()).build();
         }
 
         return Response.ok().build();
     }
 
     @PUT
-    @Path("{objectID}/{path:.+}")
-    public void uploadFile(@PathParam("path") String path,
-        @PathParam("objectID") String objectID,
-        @QueryParam("uploadID") String uploadID,
+    @Path("{buckedID}/{path:.+}")
+    public Response uploadFile(@PathParam("path") String path,
+        @PathParam("buckedID") String buckedID,
         InputStream contents)
         throws IOException {
 
-        MCRObjectID oid = MCRObjectID.getInstance(objectID);
-        if (!MCRMetadataManager.exists(oid) || !MCRAccessManager
-            .checkPermission(oid, MCRAccessManager.PERMISSION_WRITE)) {
-            throw new ForbiddenException("No write access to " + oid);
+        final MCRFileUploadBucket bucket = MCRFileUploadBucket.getBucket(buckedID);
+        if(bucket == null){
+            throw new BadRequestException("buckedID " + buckedID + " is invalid!");
         }
-
-        final MCRFileUploadBucket bucket = MCRFileUploadBucket.getOrCreateBucket(uploadID, objectID);
 
         String unicodeNormalizedPath = Normalizer.normalize(path, Normalizer.Form.NFC);
         final java.nio.file.Path filePath = MCRUtils.safeResolve(bucket.getRoot(), unicodeNormalizedPath);
-        if (filePath.getNameCount() > 1) {
-            java.nio.file.Path parentDirectory = filePath.getParent();
-            if (!Files.exists(parentDirectory)) {
-                Files.createDirectories(parentDirectory);
-            }
-        }
+        createBucketRootIfNotExist(filePath);
 
         String actualStringFileName = bucket.getRoot().relativize(filePath).getFileName().toString();
+        MCRUploadHandler uploadHandler = bucket.getUploadHandler();
+
+        String contentLengthStr = request.getHeaderString(HttpHeaders.CONTENT_LENGTH);
+        long contentLength = contentLengthStr == null ? 0 : Long.parseLong(contentLengthStr);
         try {
-            MCRUploadHelper.checkPathName(actualStringFileName);
-        } catch (MCRException e) {
-            throw new ClientErrorException(e.getMessage(), Response.Status.BAD_REQUEST.getStatusCode());
+            uploadHandler.validateFileMetadata(actualStringFileName, contentLength);
+        } catch (MCRUploadForbiddenException e) {
+            return Response.status(Response.Status.FORBIDDEN).entity(e.getMessage()).build();
+        } catch (MCRInvalidFileException e) {
+            return Response.status(Response.Status.BAD_REQUEST).entity(e.getMessage()).build();
+        } catch (MCRUploadServerException e) {
+            return Response.status(Response.Status.INTERNAL_SERVER_ERROR).entity(e.getMessage()).build();
         }
 
-        long maxSize = MCRConfiguration2.getOrThrow("MCR.FileUpload.MaxSize", Long::parseLong);
-        String contentLength = request.getHeaderString(HttpHeaders.CONTENT_LENGTH);
-        if (contentLength == null || Long.parseLong(contentLength) == 0) {
+        if (contentLength == 0) {
             Files.createDirectory(filePath);
-        } else if (Long.parseLong(contentLength) > maxSize) {
-            throw new BadRequestException("File is to big. " + unicodeNormalizedPath);
         } else {
             final List<MCRPostUploadFileProcessor> processors = FILE_PROCESSORS.stream()
                 .filter(processor -> processor.isProcessable(unicodeNormalizedPath))
-                .collect(Collectors.toList());
+                .toList();
 
             if (processors.size() == 0) {
                 Files.copy(contents, filePath, StandardCopyOption.REPLACE_EXISTING);
@@ -381,6 +244,16 @@ public class MCRUploadResource {
                 }
                 Files.copy(input, filePath, StandardCopyOption.REPLACE_EXISTING);
                 Files.deleteIfExists(input);
+            }
+        }
+        return Response.noContent().build();
+    }
+
+    private static void createBucketRootIfNotExist(java.nio.file.Path filePath) throws IOException {
+        if (filePath.getNameCount() > 1) {
+            java.nio.file.Path parentDirectory = filePath.getParent();
+            if (!Files.exists(parentDirectory)) {
+                Files.createDirectories(parentDirectory);
             }
         }
     }
